--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;database=ColombianCoffeeApp;user=campus2023;password=campus2023;"
+    "DefaultConnection": "server=127.0.0.1;database=ColombianCoffeeApp;user=root;password=Fabioandres2007;"
   }
 }
